--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,6 @@
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
-
-html {
-  box-sizing: border-box;
-
+.dancing {
+font-family: 'Dancing Script', cursive;
 }
-
-*, *::before, *::after {
-  box-sizing: inherit;
-
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
+.vollkorn {
+font-family: 'Vollkorn', serif;
 }
