--- a/css/type.css
+++ b/css/type.css
@@ -1,6 +1,6 @@
 /*
   Typografier || Code released under the UNLICENSE
-  https://typografier.web-dev.tools/#0,100,1.3,1.067,0;38,110,1.4,1.500,1;60,120,1.5,1.500,1;90,130,1.5,1.500,1
+  https://typografier.web-dev.tools/#0,100,1.3,1.500,0;38,110,1.4,1.500,1;60,120,1.5,1.500,1;90,130,1.5,1.500,1
 */
 
 html {
@@ -170,63 +170,63 @@ caption {
 }
 
 .tenamega {
-  font-size: 2.0408rem;
-  line-height: 2.925rem;
+  font-size: 86.4976rem;
+  line-height: 112.45rem;
 }
 
 .tenakilo {
-  font-size: 1.9127rem;
-  line-height: 2.6rem;
+  font-size: 57.665rem;
+  line-height: 75.075rem;
 }
 
 .tena {
-  font-size: 1.7926rem;
-  line-height: 2.6rem;
+  font-size: 38.4434rem;
+  line-height: 50.05rem;
 }
 
 .nina {
-  font-size: 1.68rem;
-  line-height: 2.275rem;
+  font-size: 25.6289rem;
+  line-height: 33.475rem;
 }
 
 .yotta {
-  font-size: 1.5745rem;
-  line-height: 2.275rem;
+  font-size: 17.0859rem;
+  line-height: 22.425rem;
 }
 
 .zetta {
-  font-size: 1.4757rem;
-  line-height: 1.95rem;
+  font-size: 11.3906rem;
+  line-height: 14.95rem;
 }
 
 h1,
 .exa {
-  font-size: 1.383rem;
-  line-height: 1.95rem;
+  font-size: 7.5938rem;
+  line-height: 10.075rem;
 }
 
 h2,
 .peta {
-  font-size: 1.2962rem;
-  line-height: 1.95rem;
+  font-size: 5.0625rem;
+  line-height: 6.825rem;
 }
 
 h3,
 .tera {
-  font-size: 1.2148rem;
-  line-height: 1.625rem;
+  font-size: 3.375rem;
+  line-height: 4.55rem;
 }
 
 h4,
 .giga {
-  font-size: 1.1385rem;
-  line-height: 1.625rem;
+  font-size: 2.25rem;
+  line-height: 2.925rem;
 }
 
 h5,
 .mega {
-  font-size: 1.067rem;
-  line-height: 1.625rem;
+  font-size: 1.5rem;
+  line-height: 1.95rem;
 }
 
 h6,
@@ -239,13 +239,13 @@ textarea {
 
 small,
 .milli {
-  font-size: .9372rem;
-  line-height: 1.3rem;
+  font-size: .6667rem;
+  line-height: .975rem;
 }
 
 .micro {
-  font-size: .8784rem;
-  line-height: 1.3rem;
+  font-size: .4444rem;
+  line-height: .65rem;
 }
 
 ul {
