--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ font-family: 'Dancing Script', sans-serif;
 .vollkorn {
 font-family: Vollkorn, serif;
 }
-.dot {
+.circle {
   height: 480px;
   width: 480px;
   background-color: #bbb;
