Add a border to the top of the second paragraph element

--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,9 @@ font-family: Vollkorn, serif;
   border-radius: 50%;
   min-width: 20em;
 }
+
+.border {
+  text-align: center;
+  border-top: 2px solid #000000;
+  width: 7em;
+}
