Fix indentation issues in the main css

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 .dancing {
-font-family: 'Dancing Script', sans-serif;
+  font-family: "Dancing Script", sans-serif;
 }
 
 .vollkorn {
-font-family: Vollkorn, serif;
+  font-family: Vollkorn, serif;
 }
 
 .circle-1 {
@@ -24,7 +24,7 @@ font-family: Vollkorn, serif;
 
 .border {
   text-align: center;
-  border-top: 2px solid #000000;
+  border-top: 2px solid #000;
   width: 7em;
 }
 
