--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 .circle-1 {
   height: 20em;
   width: 20em;
-  background-color: #e5985e;
+  background-color: #FFA35F;
   border-radius: 50%;
   min-width: 20em;
 }
@@ -17,7 +17,7 @@
 .circle-2 {
   height: 20em;
   width: 20em;
-  background-color: #d8803e;
+  background-color: #FFC15F;
   border-radius: 50%;
   min-width: 20em;
 }
